<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:id="@+id/news_image_view"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_user"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/news_title_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="14sp"
                />

            <TextView
                android:id="@+id/news_author_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/author"
                android:textColor="@color/black"
                android:textSize="14sp"
                />

            <TextView
                android:id="@+id/news_source_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/source"
                android:textColor="@color/black"
                android:textSize="14sp"
                />

            <TextView
                android:id="@+id/news_published_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/published"
                android:textColor="@color/black"
                android:textSize="14sp"
                />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/news_description_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_marginVertical="10dp"
        />

</LinearLayout>